Agregado de la ultima receta, e imagenes faltantes

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
     </header>
 
     
-    <!-- Portfolio Section -->
+    <!-- Straight Section -->
     <section class="page-section portfolio" id="portfolio">
         <div class="container">
 
-            <!-- Portfolio Section Heading -->
+            <!-- Straight Section Heading -->
             <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Straight</h2>
 
             <!-- Icon Divider -->
@@ -84,10 +84,10 @@
                 <div class="divider-custom-line"></div>
             </div>
 
-            <!-- Portfolio Grid Items -->
+            <!-- Straight Grid Items -->
             <div class="row">
 
-                <!-- Portfolio Item 1 -->
+                <!-- Straight Item 1 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
                         <div
@@ -100,7 +100,7 @@
                     </div>
                 </div>
 
-                <!-- Portfolio Item 2 -->
+                <!-- Straight Item 2 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                         <div
@@ -113,7 +113,7 @@
                     </div>
                 </div>
 
-                <!-- Portfolio Item 3 -->
+                <!-- Straight Item 3 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
                         <div
@@ -126,7 +126,7 @@
                     </div>
                 </div>
 
-                <!-- Portfolio Item 4 -->
+                <!-- Straight Item 4 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
                         <div
@@ -139,7 +139,7 @@
                     </div>
                 </div>
 
-                <!-- Portfolio Item 5 -->
+                <!-- Straight Item 5 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
                         <div
@@ -152,7 +152,7 @@
                     </div>
                 </div>
 
-                <!-- Portfolio Item 6 -->
+                <!-- Straight Item 6 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
                         <div
@@ -161,7 +161,7 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
+                        <img class="img-fluid" src="img/pozole.jpg" alt="">
                     </div>
                 </div>
 
