--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 
             <!-- Contact Section Form -->
             <div class="row">
-                <div class="col-lg-8 mx-auto"> 
+                <div class="col-lg-8 mx-auto">
                     <form name="sentMessage" id="contactForm" novalidate="novalidate">
                         <div class="control-group border border-success rounded">
                             <div class="form-group floating-label-form-group controls mb-0 pb-2">
@@ -528,6 +528,47 @@
 
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="footer text-center">
+        <div class="container">
+            <div class="row">
+
+                <!-- Footer Location -->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="text-uppercase mb-4">Location</h4>
+                    <p class="lead mb-0">Génova 28A
+                        <br>Cd del Valle, 63157</p>
+                </div>
+
+                <!-- Footer Social Icons -->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="text-uppercase mb-4">Around the Web</h4>
+                    <a class="btn btn-outline-success btn-social mx-1" href="#">
+                        <i class="fab fa-fw fa-facebook-f"></i>
+                    </a>
+                    <a class="btn btn-outline-success btn-social mx-1" href="#">
+                        <i class="fab fa-fw fa-twitter"></i>
+                    </a>
+                    <a class="btn btn-outline-success btn-social mx-1" href="#">
+                        <i class="fab fa-fw fa-linkedin-in"></i>
+                    </a>
+                    <a class="btn btn-outline-success btn-social mx-1" href="#">
+                        <i class="fab fa-fw fa-dribbble"></i>
+                    </a>
+                </div>
+
+                <!-- Footer About Text -->
+                <div class="col-lg-4">
+                    <h4 class="text-uppercase mb-4">About straight</h4>
+                    <p class="lead mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+
+            </div>
+        </div>
+        <p>&copy; 2020 Lading Page practice<p></p>
+    </footer>
+    
     <!---Scripts Jquery and Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
