--- a/index.html
+++ b/index.html
@@ -566,9 +566,13 @@
 
             </div>
         </div>
-        <p>&copy; 2020 Lading Page practice<p></p>
+        
     </footer>
-    
+    <section class="copyright py-4 text-center text-success">
+        <div class="container">
+            <small>&copy; 2020 Lading Page practice</small>
+        </div>
+      </section>
     <!---Scripts Jquery and Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
